- Improvement on the sample app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="add_transaction.ionsistemas.com.br.addtransaction.MainActivity">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -213,6 +211,18 @@
                     android:inputType="textCapWords" />
 
             </LinearLayout>
+
+            <CheckBox
+                android:id="@+id/checkCreateDependenciesIfNeeded"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create dependencies if needed" />
+
+            <CheckBox
+                android:id="@+id/checkNotification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notification" />
 
         </LinearLayout>
 
